# NeuralBudget

./: .gitignore  ADAPTIVE_WINDOWING_COMPLETE.md  ADAPTIVE_WINDOWING_DEPLOYMENT.md  ADAPTIVE_WINDOWING_DESIGN.md  ADAPTIVE_WINDOWING_SUMMARY.md  ADVANCED_ALERT_DISPATCH_SUMMARY.md  AGENT_SLO_IMPLEMENTATION.md  ANOMALY_DETECTION_IMPLEMENTATION.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CI_VERIFICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  LICENSE  LICENSE.COMMERCIAL  LICENSING.md  LLM_JUDGE_IMPLEMENTATION.md  PARALLEL_SLO_API_REFERENCE.md  PARALLEL_SLO_EVALUATION.md  PHASE3_BENCHMARK_GUIDE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_GETTING_STARTED.md  PHASE3_STREAMING_IMPLEMENTATION.md  QUICKSTART_IMPLEMENTATION.md  QUICKSTART_LLM_JUDGE.md  README.md  TTFT_SLO_IMPLEMENTATION.md  agentmap.md  docker-compose.yml  libcheck_imports.rlib  pyproject.toml
.cargo/: audit.toml
.github/workflows/: cd.yml  ci.yml  cli-build.yml  pypi-release.yml  quickstart-validation.yml  release-publish.yml  release.yml
benches/: composite_slo_dag.rs  streaming_aggregator.rs
docs/: INDEX.md
docs/cli/: DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md
docs/guides/: DEPLOYMENT_GUIDE.md  PARALLEL_SLO_API_REFERENCE.md  advanced_alert_dispatch.md  agent-slo.md  anomaly_drift_detection.md  applying-prometheus-rules.md  burn-rate-forecasting.md  composite-genai-slo.md  cost-slo.md  dashboard_cli.md  development.md  documentation-index.md  genai_connectors.md  getting-started.md  hallucination-detection-slo.md  kubernetes-integration.md  llm-judge-eval.md  multi-burn-rate-alerting.md  production-deployment.md  prometheus-rule-generation.md  prometheus-rules-example.md  prometheus-scraping-examples.md  troubleshooting.md  ttft-slo.md  user-guide.md
docs/internal/: AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  COMPOSITE_DAG_ENHANCEMENT.md  COST_SLO_IMPLEMENTATION.md  DOCUMENTATION_AUDIT_PHASE1.md  HALLUCINATION_DETECTION_IMPLEMENTATION.md  LICENSING.md  QUICKSTART_LLM_JUDGE.md  TTFT_SLO_IMPLEMENTATION.md
docs/plans/: mlops-model-drift-serving-plan.md
docs/quickstart/: 5-minute-composite-dag-slo.md  5-minute-genai-slo.md  5-minute-http-slo.md  5-minute-ml-slo.md  INDEX.md
docs/reference/: ADVANCED_ALERT_DISPATCH_SUMMARY.md  DASHBOARD_CLI_IMPLEMENTATION.md  DASHBOARD_CLI_README.md  GENAI_CONNECTORS_PHASE4_SUMMARY.md  advanced_alert_dispatch.md  anomaly_drift_detection.md  api.md  architecture.md  burn-rate-forecasting.md  composite-slo-dag.md  convenience-layer.md  (+6 more)
examples/: sample_http.json  slo_agent.json  slo_agent.yaml  slo_genai_composite.yaml  slo_genai_cost_budget.json  slo_genai_cost_budget.yaml  slo_genai_hallucination_rag.json  slo_genai_hallucination_rag.yaml  slo_genai_llm_judge.yaml  slo_genai_quality_eval.json  slo_genai_ttft.json  slo_genai_ttft.yaml  slo_http.yaml  slo_ml.yaml
scripts/: release_local_simulator.sh  update_changelog.py
src/: agent_slo.rs  core.rs  cost_slo.rs  exporter.rs  forecasting.rs  genai_evaluator.rs  genai_slo.rs  groundedness.rs  lib.rs  openslo.rs  otlp.rs  python.rs  slo_graph.rs  streaming.rs  tests.rs
tests/: agent_slo_tests.rs  cli_integration_tests.rs  composite_genai_integration_tests.rs  comprehensive_unit_tests.rs  cost_slo_tests.rs  functional_end_to_end_tests.rs  functional_tests.rs  genai_quality_evaluation_tests.rs  genai_ttft_slo_tests.rs  hallucination_detection_tests.rs  integration_tests.rs  openslo_tests.rs  python_advanced_alert_dispatch_tests.py  python_agent_slo_tests.py  python_alerting_tests.py  python_burn_rate_tests.py  python_client_tests.py  python_composite_genai_slo_tests.py  python_comprehensive_tests.py  python_convenience_tests.py  python_cost_slo_tests.py  python_functional_integration_tests.py  python_genai_quality_tests.py  python_genai_ttft_slo_tests.py  python_hallucination_tests.py  python_streaming_aggregator_tests.py  test_adaptive_slo.py  test_anomaly_detection.py  test_multi_burn_rate.py  test_prometheus_rules.py  validate_quickstart_examples.sh
(+62 files in other folders)
