[package]
name = "neuralbudget"
version = "0.1.3"
edition = "2021"
description = "Rust-first SLO data models and Python interop for availability, latency, and error-budget analysis"
readme = "README.md"
repository = "https://github.com/pristley/NeuralBudget"
homepage = "https://github.com/pristley/NeuralBudget"
license = "LicenseRef-NeuralBudget-Source-Available-1.0"

[lib]
name = "neuralbudget"
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "composite_slo_dag"
harness = false