[package]
name = "neuralbudget"
version = "0.1.3"
edition = "2021"
description = "Rust-first SLO data models and Python interop for availability, latency, and error-budget analysis"
readme = "README.md"
repository = "https://github.com/pristley/NeuralBudget"
homepage = "https://github.com/pristley/NeuralBudget"
license = "Apache-2.0"

[lib]
name = "neuralbudget"
crate-type = ["rlib"]

[[bin]]
name = "neuralbudget"
path = "src/bin/main.rs"

[dependencies]
pyo3 = { version = "0.24.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.7"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "composite_slo_dag"
harness = false