[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "neuralbudget"
version = "0.1.3"
description = "Rust-first SLO data models and Python interop for availability, latency, and error-budget analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["slo", "observability", "python", "rust", "pyo3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]

[tool.maturin]
module-name = "neuralbudget"
python-source = "python"
features = ["pyo3/extension-module"]
